# m2-ctrl-code

./: .gitignore  Cargo.toml  build.rs
asm/pid-damping/: Cargo.toml  build.rs
asm/pid-damping/src/: lib.rs
asm/pid-damping/sys/: ASM_PIplusD_Fd.c  ASM_PIplusD_Fd_data.c  ASM_PIplusD_Fd_types.h
asm/positionner/: Cargo.toml  build.rs
asm/positionner/src/: lib.rs
asm/preshape-filter/: Cargo.toml  build.rs
asm/preshape-filter/src/: lib.rs
asm/preshape-filter/sys/: mod.rs
asm/simulink_models/: m2asm_tests.mat
calib_dt/: m2asm_ctrl_dt.mat
simulink_models/: load_m2asm_data.m  m2asm_2_rust.slx  m2asm_tests.mat  test_data_readme.md  test_data_readme.rtf
src/: lib.rs
src/asm_PIplusD_Fd/: ASM_PIplusD_Fd.h  ASM_PIplusD_Fd_private.h  mod.rs  rtwtypes.h
src/piezostack/: M2_PZT_Control.c  M2_PZT_Control.h  M2_PZT_Control_data.c  M2_PZT_Control_private.h  M2_PZT_Control_types.h  mod.rs  rtwtypes.h
src/positionner/: M2_POS_Control.c  M2_POS_Control.h  M2_POS_Control_data.c  M2_POS_Control_private.h  M2_POS_Control_types.h  mod.rs  rtwtypes.h
src/ptt_asmC_fd/: mod.rs  pttASMC_FluidD.c  pttASMC_FluidD.h  pttASMC_FluidD_data.c  pttASMC_FluidD_private.h  pttASMC_FluidD_types.h  rtwtypes.h
src/tiptilt/: TT_Control.c  TT_Control.h  TT_Control_private.h  TT_Control_types.h  mod.rs  rtwtypes.h
template/: Cargo.toml  README.md
template/src/: lib.rs
wfc/C_ngao/: Cargo.toml  build.rs
wfc/ngao/: Cargo.toml
wfc/ngao/src/: lib.rs
