[workspace]
members = ["asm/preshape-filter", "asm/pid-damping", "asm/positionner"]

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope primary mirror control system"
repository = "https://github.com/rconan/m1-ctrl"
documentation = "https://docs.rs/gmt_m1-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
bindgen = "0.63.0"
cc = "1.0.68"
matio-rs = "1.1.2"
simulink-binder = { version = "1.0.0" }
paste = "1.0.12"
