[workspace]
members = [
    "asm/preshape-filter",
    "asm/pid-damping",
    "asm/positionner",
    "wfc/ngao",
]

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope prsecondaryimary mirror control system"
repository = "https://github.com/rconan/gmt-m2-ctrl"
documentation = "https://docs.rs/gmt_m2-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
matio-rs = "1.1.2"
simulink-rs = "2.0.0"
