[package]
name = ...
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
paste.workspace = true
simulink-builder.workspace = true

[build-dependencies]
simulink-builder.workspace = true

[dev-dependencies]
matio-rs.workspace = true
