[package]
name = "gmt_m2-ctrl_asm_pid-damping"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
paste.workspace = true
simulink-binder.workspace = true

[build-dependencies]
cc.workspace = true
bindgen.workspace = true

[dev-dependencies]
matio-rs.workspace = true
